--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,7 @@ dill==0.3.8
     # via
     #   datasets
     #   multiprocess
+es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl
 et-xmlfile==2.0.0
     # via openpyxl
 exceptiongroup==1.2.2
@@ -371,6 +372,7 @@ pexpect==4.9.0
     # via ipython
 pillow==11.0.0
     # via matplotlib
+pip==24.3.1
 platformdirs==4.3.6
     # via jupyter-core
 preshed==3.0.9
@@ -509,6 +511,7 @@ six==1.16.0
     #   rfc3339-validator
     #   tensorboard
     #   tensorflow
+    #   tensorflow-metal
 smart-open==7.0.5
     # via
     #   gensim
@@ -518,6 +521,7 @@ sniffio==1.3.1
 soupsieve==2.6
     # via beautifulsoup4
 spacy==3.7.5
+    # via es-core-news-sm
 spacy-legacy==3.0.12
     # via spacy
 spacy-loggers==1.0.5
@@ -537,8 +541,11 @@ tensorboard==2.16.2
 tensorboard-data-server==0.7.2
     # via tensorboard
 tensorflow==2.16.2
+    # via tensorflow-macos
 tensorflow-io-gcs-filesystem==0.37.1
     # via tensorflow
+tensorflow-macos==2.16.2
+tensorflow-metal==1.1.0
 termcolor==2.5.0
     # via tensorflow
 terminado==0.18.1
@@ -636,7 +643,9 @@ websocket-client==1.8.0
 werkzeug==3.1.3
     # via tensorboard
 wheel==0.45.1
-    # via astunparse
+    # via
+    #   astunparse
+    #   tensorflow-metal
 widgetsnbextension==4.0.13
     # via ipywidgets
 wrapt==1.17.0
